# AI-course

./: PROJECT_REQUIREMENTS.md  README-libraries.md  README.md  installEnvWIthLibrary.ps1  requirements.txt
simple-ai-project/: .gitignore  README.md  app.py  chat_cli.py  load_and_use_model.py  main.py  pyproject.toml  test_project.py
simple-ai-project/docs/: model_performance.md
simple-ai-project/notebooks/: exploration.ipynb
simple-ai-project/src/: __init__.py
simple-ai-project/src/data/: __init__.py  preprocessor.py
simple-ai-project/src/models/: __init__.py  classifier.py  spam_classifier.py  train_model.py
simple-ai-project/src/utils/: __init__.py  helpers.py
week2/: git.pptx
week3/: matplotlib_learning.ipynb  numpy_learning.ipynb  pandas_learning.ipynb  project.ipynb  pyproject.toml
week4/: ML.ipynb  Search.ipynb  Week4_Homework_Exercises.ipynb  end-to-end-project.ipynb
week5/: digit_recognition_tensorflow.ipynb  neural_network_basics.ipynb
