[project]
name = "week3-porgram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "flask>=3.1.1",
    "gradio>=5.34.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=1.26.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "tensorflow==2.17.0",
    "tensorflow-intel==2.17.0",
    "opencv-python==4.10.0.84",
    "keras>=3.10.0",
]
